<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.yahoo.workmonk.gridimagesearch.activities.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:id="@+id/tvSettingsTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/image_size_label"
        android:id="@+id/tvSettingsSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spnrImageSize"
        android:layout_alignTop="@+id/spnrImageSize" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/spnrImageSize"
        android:layout_toRightOf="@+id/tvSettingsSize"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvSettingsTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/color_filter_label"
        android:id="@+id/tvSettingsColorFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spnrColorFilter"
        android:layout_alignTop="@+id/spnrColorFilter" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnrColorFilter"
        android:layout_below="@+id/spnrImageSize"
        android:layout_toRightOf="@+id/tvSettingsColorFilter"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/tvSettingsColorFilter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/image_type_label"
        android:id="@+id/tvImageType"
        android:layout_below="@+id/tvSettingsColorFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnrImageType"
        android:layout_toEndOf="@+id/tvImageType"
        android:layout_below="@+id/spnrColorFilter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tvSiteName"
        android:layout_below="@+id/spnrImageType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:id="@+id/etSiteNameValue"
        android:layout_alignBottom="@+id/tvSiteName"
        android:layout_toRightOf="@+id/tvSiteName"
        android:layout_toEndOf="@+id/tvSiteName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/spnrImageType" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onSaveSubmit"
        android:text="@string/settings_save_label"
        android:id="@+id/btnSubmitSettings"
        android:layout_below="@+id/etSiteNameValue"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
